force-app/main/default/objects/mdtDependencyObj__c/mdtDependencyObj__c.object-meta.xml
<CustomObject>
    <label>mdtDependencyObj</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>mdtDependencyObj Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>mdtDependencyObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>