force-app/main/default/objects/mdtDependencyObj__c/fields/MetadataComponentId__c.field-meta.xml
<CustomField>
    <fullName>MetadataComponentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MetadataComponentId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>