force-app/main/default/objects/mdtDependencyObj__c/fields/MetadataComponentName__c.field-meta.xml
<CustomField>
    <fullName>MetadataComponentName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MetadataComponentName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>