force-app/main/default/objects/mdtDependencyObj__c/fields/MetadataComponentNamespace__c.field-meta.xml
<CustomField>
    <fullName>MetadataComponentNamespace__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MetadataComponentNamespace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>