force-app/main/default/objects/mdtDependencyObj__c/fields/RefMetadataComponentName__c.field-meta.xml
<CustomField>
    <fullName>RefMetadataComponentName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RefMetadataComponentName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>