force-app/main/default/objects/mdtDependencyObj__c/fields/RefMetadataComponentNamespace__c.field-meta.xml
<CustomField>
    <fullName>RefMetadataComponentNamespace__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RefMetadataComponentNamespace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>