force-app/main/default/objects/mdtDependencyObj__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MetadataComponentId__c</columns>
    <columns>MetadataComponentName__c</columns>
    <columns>MetadataComponentNamespace__c</columns>
    <columns>MetadataComponentType__c</columns>
    <columns>RefMetadataComponentId__c</columns>
    <columns>RefMetadataComponentName__c</columns>
    <columns>RefMetadataComponentNamespace__c</columns>
    <columns>RefMetadataComponentType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>